Fix flag exception coloring

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -203,8 +203,8 @@
   "invalid.not_valid_plot_id": "<prefix><red>That's not a valid plot ID.</red>",
   "invalid.found_no_plots": "<prefix><red>Found no plots with your search query.</red>",
   "invalid.number_not_in_range": "<prefix><red>That's not a valid number within the range: <gray>(<min>, <max>)</gray></red>",
-  "invalid.number_not_positive": "<prefix><red>That's not a positive number: <gray><value></gray></red>",
-  "invalid.not_a_number": "<prefix><red><gray><value></gray> is not a valid number.</red>",
+  "invalid.number_not_positive": "<red>That's not a positive number: <gray><value></gray></red>",
+  "invalid.not_a_number": "<red><gray><value></gray> is not a valid number.</red>",
   "condense.invalid_area": "<prefix><red>Invalid area.</red>",
   "condense.task_already_started": "<prefix><red>Task already started.</red>",
   "condense.invalid_radius": "<prefix><red>Invalid radius.</red>",
@@ -572,20 +572,14 @@
   "flags.flag_description_keep_inventory": "<gray>Prevents players from dropping their items when they die inside of the plot.</gray>",
   "flags.flag_description_prevent_creative_copy": "<gray>Prevents people from copying item NBT data in the plot unless they're added as members.</gray>",
   "flags.flag_description_leaf_decay": "<gray>Set to `false` to prevent leaves from decaying.",
-  "flags.flag_error_boolean": "<prefix>Flag value must be a boolean (true | false).",
-  "flags.flag_error_enum": "<prefix>Must be one of: <list>",
-  "flags.flag_error_gamemode": "<prefix>Flag value must be a gamemode: 'survival', 'creative', 'adventure' or 'spectator.",
-  "flags.flag_error_integer": "<prefix>Flag value must be a whole number.",
-  "flags.flag_error_integer_list": "<prefix>Flag value must be an integer list.",
-  "flags.flag_error_keep": "<prefix>Flag value must be a timestamp or a boolean.",
-  "flags.flag_error_long": "<prefix>Flag value must be a whole number (large numbers allowed).",
-  "flags.flag_error_plotblocklist": "<prefix>Flag value must be a block list.",
-  "flags.flag_error_invalid_block": "<prefix>The provided value is not a valid block or block category.",
-  "flags.flag_error_double": "<prefix>Flag value must be a decimal number.",
-  "flags.flag_error_string": "<prefix>Flag value must be alphanumeric. Some special characters are allowed.",
-  "flags.flag_error_stringlist": "<prefix>Flag value must be a string list.",
-  "flags.flag_error_weather": "<prefix>Flag must be a weather: 'rain' or 'sun'.",
-  "flags.flag_error_music": "<prefix>Flag value must be a valid music disc ID.",
+  "flags.flag_error_boolean": "Flag value must be a boolean (true | false).",
+  "flags.flag_error_enum": "Must be one of: <list>",
+  "flags.flag_error_integer": "Flag value must be a whole positive number.",
+  "flags.flag_error_keep": "Flag value must be a timestamp or a boolean.",
+  "flags.flag_error_long": "Flag value must be a whole positive number (large numbers allowed).",
+  "flags.flag_error_invalid_block": "The provided value is not a valid block or block category.",
+  "flags.flag_error_double": "Flag value must be a decimal number.",
+  "flags.flag_error_music": "Flag value must be a valid music disc ID.",
   "flags.area_flags": "<prefix><gray>Area flags: </gray><dark_aqua><flags></dark_aqua>",
   "flags.road_flags": "<prefix><gray>Road flags: </gray><dark_aqua><flags></dark_aqua>",
   "commands.description.add": "<gray>Allow a user to build in a plot while the plot owner is online.</gray>",
