--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -338,7 +338,7 @@
   "info.plot_info_creationdate": "<gold>Creation:</gold><gray> <creationdate></gray>",
   "info.plot_user_list": "<gray><user></gray>",
   "info.plot_flag_list": "<gray><flag>: <value></gray>",
-  "info.plot_no_description": "<prefix><gray>No description set.</gray>",
+  "info.plot_no_description": "<gray>No description set.</gray>",
   "info.plot_caps_header": "<dark_gray><strikethrough>--------- <reset><gold>CAPS </gold><dark_gray><strikethrough>---------<reset>",
   "info.plot_caps_format": "<prefix><gray>- Cap Type: </gray><gold><cap> </gold><gray>| Status: </gray><gold><current></gold><gray>/</gray><gold><limit> </gold><gray>(</gray><gold><percentage>%</gold><gray>)</gray>",
   "info.plot_list_item": "<click:run_command:<command_tp>><hover:show_text:\"<command_tp>\"><dark_gray>[</dark_gray><gold><number></gold><dark_gray>]</dark_gray></hover></click><click:run_command:<command_info>> <hover:show_text:\"<hover_info>\"><gold> <plot></gold></hover></click><gray> - </gray><players>",
