--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -63,7 +63,7 @@
   "swap.swap_success": "<prefix><dark_aqua>Successfully swapped plots</dark_aqua> <gold><origin></gold><dark_aqua> -> </dark_aqua><gold><target></gold>",
   "swap.swap_merged": "<prefix><red>Merged plots may not be swapped. Please unmerge the plots before performing the swap.</red>",
   "swap.progress_region1_copy": "<prefix><gray>Current region 1 copy progress: </gray><gold><progress></gold><gray>%</gray>",
-  "swap.progress_region2_copy": "<prefix><gray>Current region 2 copy progress: </gray><gold><progress></gold><gray>%</gray",
+  "swap.progress_region2_copy": "<prefix><gray>Current region 2 copy progress: </gray><gold><progress></gold><gray>%</gray>",
   "swap.progress_region1_paste": "<prefix><gray>Current region 1 paste progress: </gray><gold><progress></gold><gray>%</gray>",
   "swap.progress_region2_paste": "<prefix><gray>Current region 2 paste progress: </gray><gold><progress></gold><gray>%</gray>",
   "swap.progress_region_copy": "<prefix><gray>Current copy progress: </gray><gold><progress></gold><gray>%</gray>",
@@ -483,7 +483,7 @@
   "flags.flag_category_string": "<gray>String Flags</gray>",
   "flags.flag_category_integers": "<gray>Integer Flags</gray>",
   "flags.flag_category_doubles": "<gray>Decimal Flags</gray>",
-  "flags.flag_category_teleport_deny": "<gray>Teleport Deny Flag</gray",
+  "flags.flag_category_teleport_deny": "<gray>Teleport Deny Flag</gray>",
   "flags.flag_category_string_list": "<gray>String List Flags</gray>",
   "flags.flag_category_weather": "<gray>Weather Flags</gray>",
   "flags.flag_category_music": "<gray>Music Flags</gray>",
