--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -575,6 +575,7 @@
   "flags.flag_description_keep_inventory": "<gray>Prevents players from dropping their items when they die inside of the plot.</gray>",
   "flags.flag_description_deny_portal_travel": "<gray>Prevents players from travelling across dimensions by using portals.</gray>",
   "flags.flag_description_deny_portals": "<gray>Prevents players from creating portals of any kind.</gray>",
+  "flags.flag_description_lectern_read_book": "<gray>Prevents players taking books from lecterns.</gray>",
   "flags.flag_description_prevent_creative_copy": "<gray>Prevents people from copying item NBT data in the plot unless they're added as members.</gray>",
   "flags.flag_description_leaf_decay": "<gray>Set to `false` to prevent leaves from decaying.",
   "flags.flag_error_boolean": "Flag value must be a boolean (true | false).",
