Rephrase message if user has no access to sub-command help pages

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -404,6 +404,7 @@
   "help.help_item": "<gold><usage> <gray>[<gold><alias></gold>]</gray>\n <dark_gray>- </dark_gray><gray><desc></gray>\n",
   "help.help_display_all_commands": "<prefix><gray>Display all commands.</gray>",
   "help.direction": "<prefix><gold>Current direction: </gold><gray><dir></gray>",
+  "help.no_permission": "<prefix><red>You have no permission to access commands of that sub category, hence you cannot access the help page.</red>",
   "category.command_category_claiming": "<gray>Claiming</gray>",
   "category.command_category_teleport": "<gray>Teleport</gray>",
   "category.command_category_settings": "<gray>Protection</gray>",
