--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -157,7 +157,7 @@
   "schematic.schematic_exportall_world": "<prefix><red>Invalid world.</red>",
   "schematics.plot_to_schem": "<dark_aqua>Plot</dark_aqua><dark_gray>-></dark_gray><dark_aqua>Schematic</dark_aqua><dark_gray>: </dark_gray><gray>Found </gray><gold><amount></gold><gray> plots...</gray>",
   "error.task_in_process": "<prefix><gold>Task is already running.</gold>",
-  "titles.title_entered_plot": "<gold>Plot: <world>;<x>;<z></gold>",
+  "titles.title_entered_plot": "<gold>Plot: <world>;<plot></gold>",
   "titles.title_entered_plot_sub": "<dark_aqua>Owned by <owner></dark_aqua>",
   "titles.prefix_greeting": "<gold><id></gold><gray>></gray>",
   "titles.prefix_farewell": "<gold><id></gold><gray>></gray>",
