Component-ify plot setup wizard
Touches #3068

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -128,7 +128,7 @@
   "setup.setup_wrong_generator": "<prefix><red>The specified generator does not identify as BukkitPlotGenerator</red><dark_gray> - </dark_gray><dark_green>You may need to manually configure the other plugin.</dark_green>",
   "setup.setup_world_name_format": "<prefix><red>Non [a-z0-9_.-] character in the world name:</red><gold> ",
   "setup.setup_world_apply_plotsquared": "<prefix><red>The world you specified already exists. After restarting, new terrain will use </red><gold>PlotSquared</gold><red>, however you may need to reset the world for it to generate correctly!</red>",
-  "setup.setup_partial_area": "<prefix><gold>What terrain would you like in plots?</gold>\n<dark_gray> - </dark_gray><dark_green>NONE</dark_green><dark_gray> - </dark_gray><gray>No terrain at all</gray>\n<dark_gray> - </dark_gray><dark_green>ORE</dark_green><dark_gray> - </dark_gray><gray>Just some ore veins and trees</gray>\n<dark_gray> - </dark_gray><dark_green>ROAD</dark_green><dark_gray> - </dark_gray><gray>Terrain separated by roads</gray>\n<dark_gray> - </dark_gray><dark_green>ALL</dark_green><dark_gray> - </dark_gray><gray>Entirely vanilla generation</gray>",
+  "setup.setup_partial_area": "<prefix><gold>What terrain would you like in plots?</gold>\n<dark_gray> - </dark_gray><dark_green>ORE</dark_green><dark_gray> - </dark_gray><gray>Just some ore veins and trees</gray>\n<dark_gray> - </dark_gray><dark_green>ROAD</dark_green><dark_gray> - </dark_gray><gray>Terrain separated by roads</gray>\n<dark_gray> - </dark_gray><dark_green>ALL</dark_green><dark_gray> - </dark_gray><gray>Entirely vanilla generation</gray>",
   "setup.setup_partial_area_error": "<prefix><red>You must choose the terrain!</red>",
   "setup.setup_area_name": "<prefix><gold>What would you like this area called?</gold>",
   "setup.setup_area_non_alphanumerical": "<prefix><red>The area ID must be alphanumerical!</red>",
@@ -138,6 +138,20 @@
   "setup.setup_area_max_plot_id": "<prefix><gold>What should be the maximum Plot ID?</gold>",
   "setup.setup_area_max_plot_id_error": "<prefix><red>You must choose a valid maximum Plot ID!</red>",
   "setup.setup_area_plot_id_greater_than_minimum": "<prefix><red>The maximum Plot ID must be greater than the minimum!</red>",
+  "setup.plot_height": "<gold>Plot height</gold>",
+  "setup.plot_width": "<gold>Plot width</gold>",
+  "setup.plot_block": "<gold>Plot block</gold><gray> (Block(s) to fill the plot with from Y0 to the defined plot height (Set in a previous step))</gray>",
+  "setup.top_block_boolean": "<gold>Whether a layer of blocks should be put on top of the plot block</gold>",
+  "setup.plot_block_floor": "<gold>Plot floor block</gold><gray> (One layer of blocks put on top of the plot block)</gray>",
+  "setup.top_wall_block": "<gold>Top wall block</gold><gray> (Block(s) shaping the border of an unclaimed plot)</gray>",
+  "setup.wall_block_claimed": "<gold>Wall block (claimed)</gold><gray> (Block(s) shaping the border of a claimed plot)</gray>",
+  "setup.road_width": "<gold>Road width</gold>",
+  "setup.road_height": "<gold>Road height</gold>",
+  "setup.road_block": "<gold>Road block</gold>",
+  "setup.wall_filling_block": "<gold>Wall filling block</gold><gray> (Block(s) been put under the plot border down to Y1)</gray>",
+  "setup.wall_height": "<gold>Wall height</gold>",
+  "setup.bedrock_boolean": "<gold>Whether a bedrock layer under the plot should be generated or not</gold>",
+  "setup.singleplotarea_void_world": "<gold>Void world</gold>",
   "plotareatype.plot_area_type_normal": "<gray>Standard plot generation</gray>",
   "plotareatype.plot_area_type_augmented": "<gray>Plot generation with vanilla terrain</gray>",
   "plotareatype.plot_area_type_partial": "<gray>Vanilla with clusters of plots</gray>",
