--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -182,10 +182,11 @@
   "reload.reload_failed": "<prefix><red>Failed to reload file configurations.</red>",
   "desc.desc_set": "<prefix><gray>Plot description set.</gray>",
   "desc.desc_unset": "<prefix><gray>Plot description unset.</gray>",
-  "alias.alias_set_to": "<prefix><gray>Plot alias set to </gray><gold><alias></gold><gray>.</gray>",
-  "alias.alias_removed": "<prefix><gray>Plot alias removed.</gray>",
+  "alias.alias_set_to": "<prefix><dark_aqua>Plot alias set to </dark_aqua><gold><alias></gold><dark_aqua>.</dark_aqua>",
+  "alias.alias_removed": "<prefix><dark_aqua>Plot alias </dark_aqua><gold><alias></gold><dark_aqua> removed.</dark_aqua>",
   "alias.alias_too_long": "<prefix><red>The alias must have less than 50 characters in length.</red>",
   "alias.alias_is_taken": "<prefix><red>That alias is already taken.</red>",
+  "alias.no_alias_set": "<prefix><red>No plot alias set.</red>",
   "position.position_set": "<prefix><gold>Home position set to your current location.</gold>",
   "position.position_unset": "<prefix><gold>Home position reset to the default location.</gold>",
   "permission.no_schematic_permission": "<prefix><red>You don't have the permission required to use schematic </red><gold><value></gold><red>.</red>",
