--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -185,7 +185,7 @@
   "alias.alias_set_to": "<prefix><dark_aqua>Plot alias set to </dark_aqua><gold><alias></gold><dark_aqua>.</dark_aqua>",
   "alias.alias_removed": "<prefix><dark_aqua>Plot alias </dark_aqua><gold><alias></gold><dark_aqua> removed.</dark_aqua>",
   "alias.alias_too_long": "<prefix><red>The alias must have less than 50 characters in length.</red>",
-  "alias.alias_is_taken": "<prefix><red>That alias is already taken.</red>",
+  "alias.alias_is_taken": "<prefix><red>That alias </red><gold><alias></gold><red> is already taken.</red>",
   "alias.no_alias_set": "<prefix><red>No plot alias set.</red>",
   "position.position_set": "<prefix><gold>Home position set to your current location.</gold>",
   "position.position_unset": "<prefix><gold>Home position reset to the default location.</gold>",
