Adjust improper origin -> target message of plot moving

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -218,6 +218,7 @@
   "invalid.not_allowed_block": "<prefix><red>That block is not allowed: <gray><value></gray></red>",
   "invalid.not_valid_number": "<prefix><red>That's not a valid number within the range: </red><gray><value></gray>",
   "invalid.not_valid_plot_id": "<prefix><red>That's not a valid plot ID.</red>",
+  "invalid.origin_cant_be_target": "<prefix><red>The origin and target location cannot be the same.</red>",
   "invalid.found_no_plots": "<prefix><red>Found no plots with your search query.</red>",
   "invalid.number_not_in_range": "<prefix><red>That's not a valid number within the range: <gray>(<min>, <max>)</gray></red>",
   "invalid.number_not_positive": "<red>That's not a positive number: <gray><value></gray></red>",
