Make `/plot rate` categories translatable

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -100,6 +100,15 @@
   "ratings.rating_not_your_own": "<prefix><red>You cannot rate your own plot.</red>",
   "ratings.rating_not_done": "<prefix><red>You can only rate finished plots.</red>",
   "ratings.rating_not_owned": "<prefix><red>You cannot rate a plot that is not claimed by anyone.</red>",
+  "ratings.0-8": "0/8",
+  "ratings.1-8": "1/8",
+  "ratings.2-8": "2/8",
+  "ratings.3-8": "3/8",
+  "ratings.4-8": "4/8",
+  "ratings.5-8": "5/8",
+  "ratings.6-8": "6/8",
+  "ratings.7-8": "7/8",
+  "ratings.8-8": "8/8",
   "tutorial.rate_this": "<prefix><gray>Rate this plot!</gray>",
   "tutorial.comment_this": "<prefix><gray>Leave some feedback on this plot: <plot>.</gray>",
   "economy.econ_disabled": "<prefix><red>Economy is not enabled.</red>",
