--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -137,7 +137,7 @@
   "setup.setup_wrong_generator": "<prefix><red>The specified generator does not identify as BukkitPlotGenerator</red><dark_gray> - </dark_gray><dark_green>You may need to manually configure the other plugin.</dark_green>",
   "setup.setup_world_name_format": "<prefix><red>Non [a-z0-9_.-] character in the world name:</red><gold> ",
   "setup.setup_world_apply_plotsquared": "<prefix><red>The world you specified already exists. After restarting, new terrain will use </red><gold>PlotSquared</gold><red>, however you may need to reset the world for it to generate correctly!</red>",
-  "setup.setup_partial_area": "<prefix><gold>What terrain would you like in plots?</gold>\n<dark_gray> - </dark_gray><dark_green>ORE</dark_green><dark_gray> - </dark_gray><gray>Just some ore veins and trees</gray>\n<dark_gray> - </dark_gray><dark_green>ROAD</dark_green><dark_gray> - </dark_gray><gray>Terrain separated by roads</gray>\n<dark_gray> - </dark_gray><dark_green>ALL</dark_green><dark_gray> - </dark_gray><gray>Entirely vanilla generation</gray>",
+  "setup.setup_partial_area": "<prefix><gold>What terrain would you like in plots?</gold>\n<dark_gray> - </dark_gray><dark_green>ROAD</dark_green><dark_gray> - </dark_gray><gray>Terrain separated by roads</gray>\n<dark_gray> - </dark_gray><dark_green>ALL</dark_green><dark_gray> - </dark_gray><gray>Entirely vanilla generation</gray>",
   "setup.setup_partial_area_error": "<prefix><red>You must choose the terrain!</red>",
   "setup.setup_area_name": "<prefix><gold>What would you like this area called?</gold>",
   "setup.setup_area_non_alphanumerical": "<prefix><red>The area ID must be alphanumerical!</red>",
