Make "NaN" in placeholders translatable

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -187,6 +187,7 @@
   "core.prefix": "<dark_gray>[</dark_gray><gold>P2</gold><dark_gray>] </dark_gray>",
   "core.enabled": "<prefix><gold><value> is now enabled.</gold>",
   "placeholder.hooked": "<prefix><gold>PlotSquared hooked into MVdWPlaceholderAPI</gold>",
+  "placeholder.nan": "Not a number",
   "reload.reloaded_configs": "<prefix><gold>Translations and world settings have been reloaded successfully.</gold>",
   "reload.reload_failed": "<prefix><red>Failed to reload file configurations.</red>",
   "desc.desc_set": "<prefix><gray>Plot description set.</gray>",
