Add TitleFlag - Allows players to set custom plot titles - Figured this would be the best implementation..? - `/plot flag set "a title" "the subtitle"` - Added it to list of flags to be sanitised for clickables just in case...

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -585,6 +585,7 @@
   "flags.flag_description_tamed_interact": "<gray>Set to `true` to allow guests to interact with tamed animals in the plot.</gray>",
   "flags.flag_description_time": "<gray>Set the time in the plot to a fixed value.</gray>",
   "flags.flag_description_titles": "<gray>Set to `false` to disable plot titles. Can be set to: `none` (to inherit world settings), `true`, or `false`</gray>",
+  "flags.flag_description_title": "<gray>Set the pop-up title's title and subtitle. Format: /plot flag set title \"A title\" \"The subtitle\"</gray>",
   "flags.flag_description_use": "<gray>Define a list of materials players should be able to interact with in the plot.</gray>",
   "flags.flag_description_vehicle_break": "<gray>Set to `true` to allow guests to break vehicles in the plot.</gray>",
   "flags.flag_description_vehicle_cap": "<gray>Set to an integer value to limit the amount of vehicles on the plot.</gray>",
@@ -611,6 +612,7 @@
   "flags.flag_error_invalid_block": "The provided value is not a valid block or block category.",
   "flags.flag_error_double": "Flag value must be a decimal number.",
   "flags.flag_error_music": "Flag value must be a valid music disc ID.",
+  "flags.flag_error_title": "Flag value must be in the format </red><grey>\"A title\" \"The subtitle\"</grey><red>.",
   "flags.area_flags": "<prefix><gray>Area flags: </gray><dark_aqua><flags></dark_aqua>",
   "flags.road_flags": "<prefix><gray>Road flags: </gray><dark_aqua><flags></dark_aqua>",
   "commands.description.add": "<gray>Allow a user to build in a plot while the plot owner is online.</gray>",
