--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -459,6 +459,7 @@
   "preset.preset_invalid": "<prefix><red>Could not generate a pattern from that preset.</red>",
   "preset.preset_lore_cost": "<prefix><gray>Cost: </gray><gold><cost></gold>",
   "preset.preset_lore_component": "<gray>Component: </gray><gold><component></gold>",
+  "preset.title": "Plot Components",
   "generic.generic_other": "<gray>other</gray>",
   "generic.generic_merged": "<gray>merged</gray>",
   "generic.generic_unowned": "<gray>unowned</gray>",
